Bumped versions and fixed comment